# dodge-rust

./: .gitignore  Cargo.toml  project.godot  rust_gdnativelibrary.tres
.fleet/: run.json
scenes/: HUD.gdns  Main.gd  Main.gdns  Main.tscn  Mob.gdns  Mob.tscn  Node.gdns  Player.gdns  Player.tscn
src/: hud.rs  lib.rs  main_sene.rs  mob.rs  player.rs  tester.rs
