[package]
name = "dodge-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.10", features = ["rt"] }
gdnative = {version = "0.11", features = ["async"]}
rand = "0.8.5"
